--- a/style.css
+++ b/style.css
@@ -53,18 +53,37 @@
     object-fit: cover;
 }
 
+.card-title{
+    font-size: 24px;
+    color: #121212;
+    font-weight: 600;
+}
+
+.card-text{
+    font-size: 16px;
+    color: #78828A;
+    font-weight: 400;
+}
+
+#load-more-btn{
+    margin: 24px 0;
+}
+
 
 @media screen and (max-width: 768px) {
-
     .body{
         margin: 0 20px;
     }
     .navbar{
         margin: 0 20px;
+        position: relative;
+        z-index: 1;
+        
     }
     .navbar-nav{
         display: flex;
         flex-direction: column;
+        background-color: #ffffff;
     }
 
     .navbar-nav .icon{
@@ -80,20 +99,17 @@
 
     .navbar-nav .btn{
         margin: 8px 0;
-
     }
     
-
 #carouselExampleSlidesOnly {
     margin: 40px;
 }
 
 .carousel-item img{
     width: 100%;
-    height: 350px;
+    height: 250px;
     object-fit: cover;
 }
-
 
 .card{
     margin: 24px 20px;
@@ -103,4 +119,19 @@
     margin: 0 20px;
 }
 
+#blog-posts img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.col-md-4{
+    padding: 0;
+}
+
+#load-more-btn{
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    }
 }
