--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     --info: #17a2b8;
     --warning: #ffc107;
     --danger: #dc3545;
-    --light: #f8f9fa;
+    --light: #f8f9fa; 
     --dark: #343a40;
 
 }
@@ -660,20 +660,19 @@ body a{
         width: 100%;
         height: auto;
         display: flex;
-        gap: 2rem;
-        justify-content: flex-start;
+        gap: 1.5rem;
+        justify-content: space-between;
         align-items: center;
+
         }
 
     .artikel-content .card-artikel{
 
         border: 1px rgba(0,0,0,0.2);
-        width: 31.4%;
-        height: auto;
+        width: 540px;
+        height: 284px;
         display: flex;
         justify-content: space-between;
-        flex-direction: column;
-        padding: 1.5rem;
         border-radius: 12px;
         cursor: pointer;
     
@@ -681,29 +680,67 @@ body a{
     
         .artikel-content .card-artikel .card-img {
         background-size: cover;
-        width: 100%;
-        height: 15rem;
+        width: 50%;
+        height: 100%;
         object-fit: cover;
-        margin-bottom: 1rem;
         border-radius: 12px;
         padding: 0%;
     
         }
     
+        .card-artikel .card-ket{
+            margin: 0;
+            padding: 1rem;
+        }
        .artikel-content .card-artikel .judul{
-        font-size: 1rem;
+        font-size: 1.5rem;
+        margin-top: 1rem;
         font-weight: 700;
         color: var(--gray-dark);
     
        }
         .artikel-content .card-artikel .ket{
-        margin-top: 1rem;
         font-size: 14px;
         font-weight: 500;
         color: var(--teal);
         margin: 0;
        }
     
+       .artikel-content .card-artikel .desc{
+        margin-top: 0.5rem;
+        font-size: 16px;
+        font-weight: 400;
+        color: var(--gray-dark);
+        margin: 0;
+       }
+
+
+
+    .lihat-semua {
+        display: flex;
+        justify-content: flex-start;
+        width: 80%;
+        height: auto;
+        align-items: center;
+        margin-top: 16px;
+    
+      }
+    
+    .lihat-semua a{
+        margin-left: 12px;
+        color: var(--teal);
+        align-items: center;
+        text-align: center;
+        height: 1.5rem;
+      }
+    .lihat-semua p{
+        margin: 0;
+        font-size: 14px;
+        font-weight: 700;
+        color: var(--teal);
+      }
+    
+
        .artikel .artikel-title .button:hover{
         background: var(--white);
         color: var(--teal);
@@ -714,7 +751,7 @@ body a{
         box-shadow: 0 16px 16px 0 rgba(0,0,0,0.2);
       }
 
-      .card-artikel:hover .judul{
+      .card-artikel:hover .lihat-semua a,.card-artikel:hover .lihat-semua p{
         color: var(--green);
         transition: 0.3s;
       }
@@ -724,7 +761,7 @@ body a{
       
 
     /* Form Daftar */
-
+/* 
     .form-daftar {
         margin-top: 120px;
         display: flex;
@@ -863,13 +900,12 @@ body a{
     border: 1.5px solid var(--white);
 
 
-    }
+    } */
 
 
 
     /* Footer */
 .footer-section{
-    background:var(--white);
     position: relative;
     margin-top: 120px;
     display: flex;
@@ -878,7 +914,6 @@ body a{
 }
 
 .footer-section .company{
-    margin-top: 2rem;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -908,7 +943,6 @@ body a{
     justify-content: flex-end;
     width: 50%;
     height: 50%;
-    margin-top: 2rem;
 
 }
 
@@ -964,11 +998,10 @@ body a{
     
 body{
     padding: 0 1rem;
-    overflow: hidden;
 }
 
 body a{
-    font-size: 12px;
+    font-size: 14px;
 }
 
   
@@ -980,18 +1013,17 @@ body a{
 }
 
 .hero .hero-content{
-    width: 5rem;
 }
 
 .hero-content h4{
-    font-size: 12px;
+    font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 0.5rem;
 }
 
 
 .hero-content h6{
-    font-size: 8px;
+    font-size: 12px;
     font-weight: 500;
 
 }
@@ -1014,8 +1046,9 @@ body a{
 .copyright{
     display: none;
 }
+
 /* Daftar Penyakit */
-/* 
+ 
 .penyakit{
     margin-top: 80px;
 }
@@ -1037,28 +1070,37 @@ body a{
     height: 28px;
 }
 
+.daftar-penyakit
+{
+    gap: 8px;
+
+}
 
 .penyakit .daftar-penyakit .penyakit-item{
     width: 100%;
-    height: 10rem;
+    height: auto;
     margin-bottom: 1rem;
     flex-wrap: wrap;
 }
 
 .penyakit .daftar-penyakit .penyakit-item .penyakit-item-content{
-    width: 100px;
-    height: 100px;
+   align-items: center;
+    width: 70px;
+    height: 70px;
+    padding: 8px 8px;
+    border-radius: 8px;
 }
 
 .penyakit-item-content .gambar-penyakit{
-    margin-bottom: 1rem;
-    width: 64px;
-    height: 64px;
+    
+    margin-bottom: 8px;
+    width: 30px;
+    height: 30px;
     object-fit: cover;
 }
 
 .penyakit-item-content .penyakit-item-title{
-    font-size: 1rem;
+    font-size: 8px;
     font-weight: 600;
     color: var(--gray-dark);
     
@@ -1069,7 +1111,7 @@ body a{
 
     transition: all 0.3s ease;
 
-} */
+}
 
 .dokter-rekomendasi{
     display: none;
@@ -1096,9 +1138,7 @@ display: none;
     display: none;
 }
 
-.penyakit{
-    display: none;
-}
+
 }
 
 
