--- a/blog.css
+++ b/blog.css
@@ -136,4 +136,90 @@
     margin: 0 auto;
     text-align: center;
     }
+  
+  
+
+    /* Footer */
+.footer-section{
+    position: relative;
+    margin-top: 120px;
+    display: flex;
+    justify-content: space-between;
+    height: 20rem;
+}
+
+.footer-section .company{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 50%;
+    height: 50%;
+
+}
+
+.company .img{
+    padding: 3px;
+    width: 48px;
+    height: 48px;
+    border-radius: 12px;
+    background-color: var(--white);
+}
+
+.company .company-item{
+    margin-top: 1rem;
+    width: 50%;
+    color: var(--gray-dark);
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.footer-section .about{
+    display:flex;
+    justify-content: flex-end;
+    width: 50%;
+    height: 50%;
+
+}
+
+.about .title{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--gray-dark);
+}
+
+.about .fitur {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 30%;
+    height: 100%;
+    border-bottom: 2px;
+}
+
+.about .fitur-item {
+    margin-top: 1.5rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.about .fitur-item a{
+    color: var(--gray-dark);
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 10px;
+    text-decoration: none;
+}
+
+.copyright{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+}
+
+.copyright p{
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--gray);
+}
 }
